--- a/styles/core/_normalize.scss
+++ b/styles/core/_normalize.scss
@@ -123,7 +123,7 @@ input,
 optgroup,
 select,
 textarea {
-  font-family: sans-serif;
+  font-family: Gilroy;
   font-size: 100%;
   line-height: 1.15;
   margin: 0;
