--- a/styles/theme/illustrations/_illustrations.scss
+++ b/styles/theme/illustrations/_illustrations.scss
@@ -16,10 +16,12 @@
 
 // Hero illustration
 .illustration-section-01::after {
-	@include illustration('illustration-section-01.svg', 100%, 286px, top);
+	@include illustration('head.svg', 100%, 286px, top);
 }
+
 
 // Features illustration 02
 .illustration-section-02::after {
-	@include illustration('illustration-section-02.svg', 100%, 253px, null, null, 30px);
+	@include illustration('scribbles-2.svg', 100%, 400px, 130 px, null, 70px);
 }
+
